TRUNK
  - builder is building 'cruise', 'test' or 'default' target, depending on what is defined in the project
  - when build is running, OS variable CC_BUILD_ARTIFACTS is pointing to the build artifacts directory
  - Bugfix: explicitly require 'rubygems' before trying to require 'rake', do not rely on RUBYOPT=-rubygems to be set.
  - customizable Rake task and build command
--------------------------------------------------------------------------------
* 0.2
  - Unified command-line interface to web app, builder and add_project script
  - Default port changed to 3333 (to avoid clashing with other Rails apps)
  - Bugfix: builder invoking Rake with RAILS_ENV OS variable set to 'builder'
  - Bugfix: not all Windows installations have rake.cmd
  - Bugfix: CC.rb trying to build itself when a project has no Rakefile
  
--------------------------------------------------------------------------------
* 0.1 
  - Initial release.